# AlphaForge

./: .dockerignore  .gitignore  Dockerfile  README.md  afctl  deploy.sh  docker-compose.yml  install.sh  pyproject.toml  start.sh
config/: config.yaml  env.example  grid.example.yaml
deploy/etc/alphaforge/: config.yaml  env
deploy/etc/systemd/system/: alphaforge.service
files/etc/alphaforge/: config.yaml  docker-compose.yml  env  grid.yaml
files/etc/logrotate.d/: alphaforge
scripts/: bootstrap.sh  lib.sh
src/alphaforge/: __init__.py  alerts.py  cli.py  commands.py  config.py  engine.py  ibkr.py  models.py  risk.py  strategy.py
src/alphaforge/adapters/: ibkr.py
src/alphaforge/core/: config.py  models.py
src/alphaforge/execution/: __init__.py  order_manager.py  risk.py
src/alphaforge/logging/: event_log.py
src/alphaforge/state/: __init__.py  grid_store.py  heartbeat.py
src/alphaforge/strategies/: grid_v1.py
tests/: test_alerts.py  test_config.py  test_engine.py  test_event_log.py  test_grid_store.py  test_heartbeat.py  test_order_manager.py  test_risk.py  test_strategy.py
